--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KatAlog"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DetailsActivity"
+            android:theme="@style/Theme.NoActionBar"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
